fix: letter spacing on services title and subscribe form info

--- a/sass/pages/_services.scss
+++ b/sass/pages/_services.scss
@@ -24,6 +24,7 @@
     h4{
         color: $primary-red;
         text-transform: uppercase;
+        letter-spacing: 1px;
     }
 }
 
@@ -35,6 +36,7 @@
 
     h3{
         text-transform: uppercase;
+        letter-spacing: 1.8px;
     }
     
     img{
